chore: auth
